--- a/app/assets/stylesheets/themes/_midnight-theme.scss
+++ b/app/assets/stylesheets/themes/_midnight-theme.scss
@@ -106,10 +106,11 @@ $dark-2: lighten($dark, 60%);
 $dark-3: lighten($dark, 90%);
 
 // Header
-$header-background-color: $primary-dark;
+$header-background-color: lighten($primary-dark, 10%);
+$header-shadow: 0 2px 9px 0 lighten($primary-dark, 10%) !important;
 $header-item--color: $white;
-$header-item-background-color: $primary-dark;
-$header-item--active--background-color: $primary-dark;
+$header-item-background-color: lighten($primary-dark, 10%);
+$header-item--active--background-color: lighten($primary-dark, 10%);
 
 $header-item--active--color: $primary-color;
 
@@ -164,6 +165,7 @@ $header-menu-item--hover--background-color: lighten($primary-dark, 10%);
         $tabs-item--active--border-color,
         $tabs-item--active--background-color,
         $header-background-color,
+        $header-shadow,
         $header-item--color,
         $header-item-background-color,
         $header-item--active--background-color,
