shouldnt pop over menu Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2064,6 +2064,7 @@
     }
     .ant-table-placeholder {
         min-height: 130px;
+        z-index: 0;
     }
     div.account-creation {
         border: 1px solid $account-cells;
