--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -89,7 +89,7 @@ div#CenterContent {
 }
 
 .ant-collapse-header {
-    padding-left: 40<px !important;
+    padding-left: 40px !important;
 }
 
 .top-bar {
