Margin Modal Antify - Logic split of modal, clean and overhaul - AmountSelector "Lock" icon - NoTip on FormattedPrice enabled

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -12,6 +12,16 @@ $border-color: rgba(128, 128, 128, 0.45);
     }
 }
 
+.blue {
+    color: rgb(65, 116, 184) !important;
+    .icon {
+        > svg {
+            > path {
+                fill: rgb(65, 116, 184) !important;
+            }
+        }
+    }
+}
 .red {
     color: #e6001f !important;
 
