--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -226,10 +226,18 @@
         }
         .amount-selector-field--balance {
             float: right;
-            cursor: pointer;
-            &:hover {
-                color: $link-text-color;
+            .amount-selector-field--link {
+                cursor: pointer;
+                &:hover {
+                    color: $link-text-color;
+                }
             }
+        }
+    }
+    .input-group-unbordered-before {
+        > span > span {
+            background: none !important;
+            border: none !important;
         }
     }
     .form-input-header {
