2761-Portfolio Column Customization - Add Dropdown Menu with Checkboxes that allows toggling of hiding columns - Add translations for dropdown options - Add persistence of selected options in viewSettings - Add styling to dropdown menu - Add functionality to hide columns in AccountPortfolioList

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -541,3 +541,17 @@ div.tabs-container {
         }
     }
 }
+
+.columnSelector {
+    position: relative;
+    float: right;
+    top: 8px;
+    width: 200px;
+}
+
+.columnSelector-option {
+    padding: 10px;
+    .ant-checkbox-wrapper {
+        width: 100%;
+    }
+}
