--- a/app/assets/index.hbs
+++ b/app/assets/index.hbs
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="format-detection" content="telephone=no">
     <title>{{title}}</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob:; worker-src 'self' blob:; script-src https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/ 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' *; font-src 'self' data: https://at.alicdn.com; img-src 'self' data:;">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' blob:; worker-src 'self' blob:; script-src https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/ 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' *; font-src 'self' data: https://at.alicdn.com; img-src 'self' data:;">
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
@@ -28,7 +30,7 @@
             top: 50%;
             left: 50%;
             font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-            Helvetica, Arial, "Lucida Grande", sans-serif;
+                Helvetica, Arial, "Lucida Grande", sans-serif;
             font-weight: 100;
             font-size: 44px;
         }
@@ -56,6 +58,15 @@
         <h1 class="centerDiv" style="">Loading...</h1>
     </main>
     <script>
+        if (window.performance) {
+            console.info("window.performance works fine on this browser");
+        }
+        if (performance.navigation.type == 1) {
+            window.location.href = "/";
+        } else {
+            console.info("This page is not reloaded");
+        }
+
         function ieVersion(uaString) {
             uaString = uaString || navigator.userAgent;
             var match = /\b(MSIE |Trident.*?rv:|Edge\/)(\d+)/.exec(uaString);
