Update to Borrow Modal - Added 'grey' color - Fixed default coll/debt - Fixed lock color - Fixed Locks functionality - Updated "BorrowModal" help (with  translate software) - Minor and various fixes

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -22,6 +22,18 @@ $border-color: rgba(128, 128, 128, 0.45);
         }
     }
 }
+
+.grey {
+    color: rgb(102, 102, 102) !important;
+    .icon {
+        > svg {
+            > path {
+                fill: rgb(102, 102, 102) !important;
+            }
+        }
+    }
+}
+
 .red {
     color: #e6001f !important;
 
