--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -233,13 +233,13 @@ form.order-form {
 
 .buy-form {
     > div.ant-tabs-bar {
-        border-bottom: 1px solid #6ba583 !important;
+        border-bottom: 1px solid #66cc7b !important;
     }
 }
 
 .sell-form {
     > div.ant-tabs-bar {
-        border-bottom: 1px solid #e3745b !important;
+        border-bottom: 1px solid #e6416e !important;
     }
 }
 
@@ -626,11 +626,11 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .exchange-content-header.bid {
-    border-bottom: 1px solid #6ba583 !important;
+    border-bottom: 1px solid #66cc7b !important;
 }
 
 .exchange-content-header.ask {
-    border-bottom: 1px solid #e3745b !important;
+    border-bottom: 1px solid #e6416e !important;
 }
 
 .exchange-padded {
