--- a/app/assets/stylesheets/themes/_dark-theme.scss
+++ b/app/assets/stylesheets/themes/_dark-theme.scss
@@ -31,10 +31,10 @@ $warning-color: #fcab53;
 $fee-color: $secondary-text-color;
 
 // Exchange colors
-$bid-color: #6ba583;
-$ask-color: #e3745b;
+$bid-color: #66cc7b;
+$ask-color: #e6416e;
 $call-color: #bbbf2b;
-$positive-color: #258a14;
+$positive-color: #66cc7b;
 $negative-color: #ff3950;
 $row-accent-color: #3c3c3c;
 $header-color: #484848;
