--- a/app/assets/stylesheets/themes/_light-theme.scss
+++ b/app/assets/stylesheets/themes/_light-theme.scss
@@ -31,7 +31,7 @@ $warning-color: #f35b92;
 $fee-color: #7f055e;
 
 // Exchange colors
-$bid-color: #66cc7b;
+$bid-color: rgb(112, 168, 0);
 $ask-color: #ea340b;
 $call-color: #bbbf2b;
 $positive-color: #528c0a;
