--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -596,7 +596,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .market-right-padding-only {
-    height: 20px;
+    //height: 10px;
     table td:nth-last-child(1),
     table th:nth-last-child(1) {
         padding: 0 1rem 0 0 !important;
