--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -4,8 +4,7 @@
 
 .table > thead > tr > th {
     border-bottom: 1px solid #ddd;
-    padding: 4px 5px;
-    //padding-right: 8px;
+    padding-right: 8px;
     text-transform: uppercase;
     font-weight: normal;
     font-size: 12px;
@@ -14,9 +13,10 @@
 }
 
 .table > tbody > tr > td {
-    // border-bottom: 1px solid #ddd;
-    padding: 5px;
-    font-size: 11px !important;
+    border-left: 1px solid rgb(49, 49, 49);
+    padding-right: 5px;
+    font-size: 12px !important;
+    text-align: left;
 }
 
 .table > tbody > tr:last-of-type > td {
