- added collapsed components - performed styling

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2635,6 +2635,16 @@
     .modal--transaction-confirm {
         zindex: 10000; // make transaction confirm modal above another modals
     }
+
+    .asset-collapse {
+        .ant-collapse-header {
+            background: $panel-bg-color;
+            color: $primary-text-color !important;            
+            border: solid 1.2px $panel-bg-color !important;
+        }
+    }
+
+
 }
 .rc-time-picker-panel {
     z-index: 9999 !important;
