--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -16,7 +16,7 @@
     border-left: 1px solid rgb(49, 49, 49);
     padding-right: 5px;
     font-size: 12px !important;
-    text-align: left;
+    text-align: right;
 }
 
 .table > tbody > tr:last-of-type > td {
