--- a/app/assets/stylesheets/layout/_antd.scss
+++ b/app/assets/stylesheets/layout/_antd.scss
@@ -41,7 +41,7 @@
         input {
             text-align: right !important;
         }
-        padding-bottom: 0px !important; // wtf is this?
+        padding-bottom: 0px !important;
         .ant-input-group-addon {
             width: 60% !important;
             text-align: left !important;
