--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -199,7 +199,7 @@ form.order-form {
             sans-serif;
 
         label {
-            font-size: 90% !important;
+            font-size: 12px;
         }
     }
 
@@ -220,10 +220,13 @@ form.order-form {
     // on left side instead of right
     .ant-tabs-extra-content {
         float: left !important;
-        padding: 0 15px;
+        padding-left: 5px;
         margin-right: 0px;
-        width: 270px;
     }
+}
+
+.flexifyGrow {
+    flex-grow: 1;
 }
 
 .buy-form {
@@ -500,9 +503,10 @@ div.bucket-option {
 }
 
 .buy-sell-label {
-    font-size: 90%;
+    font-size: 12px;
+    padding: 1px;
     height: 1rem;
-    white-space: nowrap;
+    white-space: wrap;
     z-index: 100; // Make sure unwrapped content isn't hidden under companion input
 }
 
@@ -608,7 +612,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .exchange-content-header {
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 500;
     text-transform: uppercase;
     overflow: hidden;
