update responsivness on market trades, etc

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -264,6 +264,9 @@ form.order-form {
     .exchange--buy-sell-form {
         max-width: 50% !important;
     }
+    .orders-trade-form {
+        max-width: 50% !important;
+    }
 }
 
 .left-order-book {
