- use SearchInput - refactor css
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -280,8 +280,16 @@ div.header-selector {
     > .action-buttons {
         float: right;
     }
+}
 
-    margin-bottom: 14px;
+div.voting {
+    div.header-selector {
+        padding: 1rem;
+    }
+
+    span.search-input {
+        width: 220px;
+    }
 }
 
 div.account-tabs {
