--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -942,3 +942,9 @@ tbody.orderbook > tr.my-order > td {
 .tether-element {
     z-index: 100;
 }
+
+.underline-title {
+    > * {
+        text-decoration: underline;
+    }
+}
