--- a/app/assets/stylesheets/layout/_page_layout.scss
+++ b/app/assets/stylesheets/layout/_page_layout.scss
@@ -159,5 +159,8 @@ div.bordered-header {
 
 .json-link {
     cursor: pointer;
-    text-transform: uppercase;
+
+    .anticon {
+      padding-right: 5px;
+    }
 }
