- remove unnecessary new method in settings  - remove unnecessary defaults (need to be dynamic, only save deviances in settings)  - remove unncessary state for view and fix use of store listening  - add props definition  - remove code duplication (re-use iscolumnchecked)  - adjust selector css and position
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2777,3 +2777,16 @@
         }
     }
 }
+
+.customizable-column--selector {
+    position: absolute;
+    right: 1rem;
+    top: -3rem;
+}
+
+.customizable-column--selector--option {
+    padding: 10px;
+    .ant-checkbox-wrapper {
+        width: 100%;
+    }
+}
