refine add prediction offer modal
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/components/PredictionMarkets/prediction.scss
+++ b/app/components/PredictionMarkets/prediction.scss
@@ -36,3 +36,10 @@ div.prediction-markets {
         }
     }
 }
+
+div.prediction-markets--add-prediction-offer {
+    .ant-form-item {
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+    }
+}
