--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -28,14 +28,14 @@
 }
 
 .table > tbody.orderbook > tr > td {
-    border-left: 1px solid rgb(49, 49, 49);
+    //border-left: 1px solid rgb(49, 49, 49);
     padding: 0px 5px 4px 0px;
     font-size: 12px !important;
     text-align: right !important;
 }
 
 .table.order-table > tbody > tr > td {
-    border-left: 1px solid rgb(49, 49, 49);
+    //border-left: 1px solid rgb(49, 49, 49);
     padding: 0px 5px 4px 0px;
     font-size: 12px !important;
     text-align: right !important;
