buy/sell buttons styling

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -178,10 +178,10 @@ p.order-table-title {
 }
 
 .short-long-button span {
-    width: 100% !important;
+    padding: 2px 2px 2px 0px;
 }
 .short-long-button button {
-    width: 100% !important;
+    padding: 2px 2px 2px 0px;
 }
 
 .buySellButton {
