price alert, star, shuffle

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -167,6 +167,10 @@ p.order-table-title {
     color: red;
 }
 
+#center-item {
+    margin: auto 2px auto 2px;
+}
+
 .bid-form {
     padding-top: 0.25rem !important;
     padding-bottom: 0.25rem !important;
