split issuer whitelist and add invalid asset flag
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/components/PredictionMarkets/prediction.scss
+++ b/app/components/PredictionMarkets/prediction.scss
@@ -43,3 +43,10 @@ div.prediction-markets--add-prediction-offer {
         margin-bottom: 0px;
     }
 }
+
+div.prediction-markets--resolve-prediction-market-asset {
+    .ant-form-item {
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+    }
+}
