- add "x_assets_hidden": to header  - WIP sync props of addopinionmodal  - put filter logic in one place
Signed-off-by: Stefan Schießl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/components/PredictionMarkets/prediction.scss
+++ b/app/components/PredictionMarkets/prediction.scss
@@ -7,6 +7,13 @@ div.prediction-markets {
 
     div.header-selector {
         padding: 1rem;
+
+        .filter-status {
+            color: darkgray;
+            float: right;
+            font-size: 14px;
+            line-height: 2rem;
+        }
     }
 
     span.search-input {
@@ -34,6 +41,13 @@ div.prediction-markets {
             left: 2px;
             top: 3px;
         }
+    }
+}
+
+div.prediction-markets--create-prediction-market {
+    .ant-form-item {
+        padding-bottom: 0px;
+        margin-bottom: 0px;
     }
 }
 
