--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -88,20 +88,17 @@
     $settings-label-color
 ) {
     $hamburger-submenu-display-endpoint: 990px;
-
     ul.header-menu {
         .divider {
             margin: 0;
         }
         background-color: $header-menu-background-color !important;
     }
-
     .menu-dropdown-wrapper {
         &.active {
             background: $header-menu--active--icon-background !important;
             ul.header-menu {
                 box-shadow: $header-menu--active--box-shadow;
-
                 li {
                     &:hover {
                         background-color: $header-menu-item--hover--background-color;
@@ -110,29 +107,24 @@
             }
         }
     }
-
     .selector {
         > .inline-block {
             border: 1px solid $selector-border-color !important;
             border-right: 0 !important;
             color: $selector-text-color !important;
-
             line-height: 1.9rem;
             &:last-child {
                 border-right: 1px solid $selector-border-color !important;
             }
         }
-
         > *:not(.inactive).inline-block {
             color: $selector-active-text-color !important;
             border: 1px solid $selector-active-border-color !important;
         }
-
         > *:not(.inactive).inline-block + * {
             border-left: 0 !important;
         }
     }
-
     .showcases-grid {
         margin: 32px 0;
         display: flex;
@@ -384,7 +376,6 @@
     // select:hover {
     // background-color: $panel-bg-color;
     // }
-
     .label.success {
         color: $success-color;
         border-color: $success-color;
@@ -461,7 +452,8 @@
                 @include color(
                     $light-text-color,
                     lighten($super-light-panel-bg-color, 4%)
-                ); // color: $link-text-color;
+                );
+                // color: $link-text-color;
             }
         }
     }
@@ -749,6 +741,8 @@
                 }
                 &.divider {
                     border-bottom: 1px solid $account-border;
+                    height: 0;
+                    padding: 0;
                 }
             }
         }
@@ -1153,7 +1147,6 @@
             background-color: $explorer-tab-content-background-color;
         }
     }
-
     div.header-selector {
         > .filter {
             margin-right: 1rem;
@@ -1170,7 +1163,8 @@
             &:nth-of-type(n + 1) {
                 padding-left: 10px;
                 padding-right: 10px;
-                border-right: 1px solid white; // TODO: FIX
+                border-right: 1px solid white;
+                // TODO: FIX
             }
             &:hover.inactive {
                 color: inherit;
@@ -1184,7 +1178,6 @@
             flex-direction: row;
             align-items: center;
         }
-
         > .filter-block {
             float: left;
             display: flex;
@@ -1193,11 +1186,9 @@
                 margin-right: 10px;
             }
         }
-
         > .action-buttons {
             float: right;
         }
-
         > .header-selector--error {
             color: red;
             line-height: 2rem;
@@ -1632,7 +1623,6 @@
     .ask {
         background-color: $ask-color !important;
     }
-
     .orderbook-latest-price {
         > div {
             $orderbook-center-horizontal-margin: 5px;
@@ -1681,7 +1671,6 @@
     // > tbody > tr:nth-of-type(even) {
     // background-color: $row-accent-color;
     // }
-
     // }
     .mymarkets-header {
         background-color: $header-color;
@@ -1772,10 +1761,7 @@
         @include button-focus($primary-text-color, $panel-bg-color, 10);
     }
     li.stat.clickable {
-        color: $secondary-text-color;
-        // &:hover{
-        // @include button-focus($primary-text-color, $panel-bg-color, 10);
-        // }
+        color: $secondary-text-color; // &:hover{ // @include button-focus($primary-text-color, $panel-bg-color, 10); // }
     }
     .mymarkets-tabs {
         > li {
@@ -1889,17 +1875,14 @@
             }
         }
     }
-
     .margin-row > td:last-of-type {
         padding: 0px !important;
         margin: 0px !important;
     }
-
     .margin-ratio {
         padding: 6px;
         @include RobotoMedium;
     }
-
     .margin-ratio.danger {
         background-color: darken($alert-color, 15%) !important;
         color: darken($dark-text-color, 15%);
@@ -1908,7 +1891,6 @@
         background-color: darken($warning-color, 15%) !important;
         color: darken($dark-text-color, 15%);
     }
-
     tr.margin-row {
         > td.danger {
             background-color: darken($alert-color, 15%) !important;
@@ -2036,14 +2018,11 @@
         background-color: $tabs-background-color;
         li {
             transition: all 0.3s ease 0s;
-
             background-color: $tabs-item-background-color;
-
             border-top: 0;
             border-left: 0;
             border-right: 0;
             border-bottom: $tabs-item-border-size solid $tabs-item-border-color;
-
             > a {
                 background-color: $tabs-item-background-color;
                 color: $tabs-item-color;
@@ -2072,6 +2051,7 @@
                         color: $account-dimmed;
                     }
                 }
+
                 .icon.locked > svg > path {
                     fill: $button-bg-color;
                 }
@@ -2259,11 +2239,8 @@
     }
     .header-container {
         background-color: $header-background-color;
-
         box-shadow: $header-shadow;
-
         z-index: 2;
-
         .menu-group {
             .menu-bar {
                 li {
@@ -2292,7 +2269,6 @@
                 }
             }
         }
-
         .menu-dropdown-wrapper {
             &.active {
                 background: $panel-bg-color;
@@ -2302,6 +2278,8 @@
             background-color: $panel-bg-color;
             li.divider {
                 border-bottom: 1px solid $dark-text-color;
+                height: 0;
+                padding: 0;
             }
             > li:hover {
                 background-color: $super-light-panel-bg-color;
@@ -2471,6 +2449,7 @@
                 background: transparent;
             }
         }
+
         &-divider {
             margin: 24px 0;
             height: 1px;
@@ -2479,7 +2458,6 @@
         }
         &-modal {
         }
-
         &-input-field {
             border-radius: 5px 0 0 5px !important;
         }
@@ -2687,7 +2665,6 @@
     .modal--transaction-confirm {
         zindex: 10000; // make transaction confirm modal above another modals
     }
-
     .asset-collapse {
         .ant-collapse-header {
             background: $panel-bg-color;
@@ -2811,8 +2788,7 @@
 }
 .truncated {
     flex: 1;
-    min-width: 0;
-    /* or some value */
+    min-width: 0; /* or some value */
     .text {
         white-space: nowrap;
         overflow: hidden;
@@ -2846,12 +2822,10 @@
         }
     }
 }
-
 div.customizable-column--selector {
     position: absolute;
     right: 1rem;
     top: -3rem;
-
     > .customizable-column--selector--option {
         padding: 10px;
         .ant-checkbox-wrapper {
@@ -2859,7 +2833,6 @@ div.customizable-column--selector {
         }
     }
 }
-
 div.customizable-column--selector--dropdown {
     ul.ant-select-dropdown-menu-vertical {
         max-height: 100% !important;
