--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -88,17 +88,20 @@
     $settings-label-color
 ) {
     $hamburger-submenu-display-endpoint: 990px;
+
     ul.header-menu {
         .divider {
             margin: 0;
         }
         background-color: $header-menu-background-color !important;
     }
+
     .menu-dropdown-wrapper {
         &.active {
             background: $header-menu--active--icon-background !important;
             ul.header-menu {
                 box-shadow: $header-menu--active--box-shadow;
+
                 li {
                     &:hover {
                         background-color: $header-menu-item--hover--background-color;
@@ -107,24 +110,29 @@
             }
         }
     }
+
     .selector {
         > .inline-block {
             border: 1px solid $selector-border-color !important;
             border-right: 0 !important;
             color: $selector-text-color !important;
+
             line-height: 1.9rem;
             &:last-child {
                 border-right: 1px solid $selector-border-color !important;
             }
         }
+
         > *:not(.inactive).inline-block {
             color: $selector-active-text-color !important;
             border: 1px solid $selector-active-border-color !important;
         }
+
         > *:not(.inactive).inline-block + * {
             border-left: 0 !important;
         }
     }
+
     .showcases-grid {
         margin: 32px 0;
         display: flex;
@@ -135,8 +143,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-        max-width: calc((450px + 32px) * 3);
-        // 450px + 32px padding * 3 cells
+        max-width: calc((450px + 32px) * 3); // 450px + 32px padding * 3 cells
     }
     .showcases-grid--wrapper--item {
         color: $secondary-text-color;
@@ -377,6 +384,7 @@
     // select:hover {
     // background-color: $panel-bg-color;
     // }
+
     .label.success {
         color: $success-color;
         border-color: $success-color;
@@ -453,8 +461,7 @@
                 @include color(
                     $light-text-color,
                     lighten($super-light-panel-bg-color, 4%)
-                );
-                // color: $link-text-color;
+                ); // color: $link-text-color;
             }
         }
     }
@@ -1146,6 +1153,7 @@
             background-color: $explorer-tab-content-background-color;
         }
     }
+
     div.header-selector {
         > .filter {
             margin-right: 1rem;
@@ -1162,8 +1170,7 @@
             &:nth-of-type(n + 1) {
                 padding-left: 10px;
                 padding-right: 10px;
-                border-right: 1px solid white;
-                // TODO: FIX
+                border-right: 1px solid white; // TODO: FIX
             }
             &:hover.inactive {
                 color: inherit;
@@ -1177,6 +1184,7 @@
             flex-direction: row;
             align-items: center;
         }
+
         > .filter-block {
             float: left;
             display: flex;
@@ -1185,9 +1193,11 @@
                 margin-right: 10px;
             }
         }
+
         > .action-buttons {
             float: right;
         }
+
         > .header-selector--error {
             color: red;
             line-height: 2rem;
@@ -1278,7 +1288,6 @@
         > p:first-of-type {
             color: $light-text-color;
         }
-
         .account-title {
             &.flash {
                 color: white;
@@ -1623,6 +1632,7 @@
     .ask {
         background-color: $ask-color !important;
     }
+
     .orderbook-latest-price {
         > div {
             $orderbook-center-horizontal-margin: 5px;
@@ -1671,6 +1681,7 @@
     // > tbody > tr:nth-of-type(even) {
     // background-color: $row-accent-color;
     // }
+
     // }
     .mymarkets-header {
         background-color: $header-color;
@@ -1761,7 +1772,9 @@
         @include button-focus($primary-text-color, $panel-bg-color, 10);
     }
     li.stat.clickable {
-        color: $secondary-text-color; // &:hover{ // @include button-focus($primary-text-color, $panel-bg-color, 10);
+        color: $secondary-text-color;
+        // &:hover{
+        // @include button-focus($primary-text-color, $panel-bg-color, 10);
         // }
     }
     .mymarkets-tabs {
@@ -1876,14 +1889,17 @@
             }
         }
     }
+
     .margin-row > td:last-of-type {
         padding: 0px !important;
         margin: 0px !important;
     }
+
     .margin-ratio {
         padding: 6px;
         @include RobotoMedium;
     }
+
     .margin-ratio.danger {
         background-color: darken($alert-color, 15%) !important;
         color: darken($dark-text-color, 15%);
@@ -1892,6 +1908,7 @@
         background-color: darken($warning-color, 15%) !important;
         color: darken($dark-text-color, 15%);
     }
+
     tr.margin-row {
         > td.danger {
             background-color: darken($alert-color, 15%) !important;
@@ -1963,7 +1980,6 @@
             background-color: lighten($positive-color, 5%);
         }
     }
-
     div.ok-indicator {
         color: $secondary-text-color;
         &.success {
@@ -2020,11 +2036,14 @@
         background-color: $tabs-background-color;
         li {
             transition: all 0.3s ease 0s;
+
             background-color: $tabs-item-background-color;
+
             border-top: 0;
             border-left: 0;
             border-right: 0;
             border-bottom: $tabs-item-border-size solid $tabs-item-border-color;
+
             > a {
                 background-color: $tabs-item-background-color;
                 color: $tabs-item-color;
@@ -2240,8 +2259,11 @@
     }
     .header-container {
         background-color: $header-background-color;
+
         box-shadow: $header-shadow;
+
         z-index: 2;
+
         .menu-group {
             .menu-bar {
                 li {
@@ -2270,6 +2292,7 @@
                 }
             }
         }
+
         .menu-dropdown-wrapper {
             &.active {
                 background: $panel-bg-color;
@@ -2456,6 +2479,7 @@
         }
         &-modal {
         }
+
         &-input-field {
             border-radius: 5px 0 0 5px !important;
         }
@@ -2663,6 +2687,7 @@
     .modal--transaction-confirm {
         zindex: 10000; // make transaction confirm modal above another modals
     }
+
     .asset-collapse {
         .ant-collapse-header {
             background: $panel-bg-color;
@@ -2756,7 +2781,6 @@
             top: 12px;
         }
     }
-
     .dropdown.header-menu {
         top: 65px;
     }
@@ -2787,7 +2811,8 @@
 }
 .truncated {
     flex: 1;
-    min-width: 0; /* or some value */
+    min-width: 0;
+    /* or some value */
     .text {
         white-space: nowrap;
         overflow: hidden;
@@ -2821,10 +2846,12 @@
         }
     }
 }
+
 div.customizable-column--selector {
     position: absolute;
     right: 1rem;
     top: -3rem;
+
     > .customizable-column--selector--option {
         padding: 10px;
         .ant-checkbox-wrapper {
@@ -2832,6 +2859,7 @@ div.customizable-column--selector {
         }
     }
 }
+
 div.customizable-column--selector--dropdown {
     ul.ant-select-dropdown-menu-vertical {
         max-height: 100% !important;
