--- a/app/assets/stylesheets/components/_quick_trade.scss
+++ b/app/assets/stylesheets/components/_quick_trade.scss
@@ -1,6 +1,3 @@
-.quick-trade .ant-select-selection {
-    margin: 0 !important;
-}
-.quick-trade .ant-input-group-addon {
-    padding: 0 !important;
+.quick-trade .ant-input {
+    margin-right: 0px !important;
 }
