WIP play with chain select
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -51,6 +51,12 @@ div.account-image {
     }
 }
 
+.chain-select {
+    .ant-select {
+        width: 100%;
+    }
+}
+
 .asset-select {
     .ant-select {
         width: 100%;
