--- a/app/assets/index.hbs
+++ b/app/assets/index.hbs
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="format-detection" content="telephone=no">
     <title>{{title}}</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob:; worker-src 'self' blob:; script-src https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/ 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' *; font-src 'self' data: https://at.alicdn.com; img-src 'self' data:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: https://www.google.com/; worker-src 'self' blob:;
+     script-src https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/ https://www.google.com/recaptcha/ 
+     https://www.gstatic.com/recaptcha/ 'self' 'unsafe-eval' 'unsafe-inline';
+      style-src 'self' 'unsafe-inline'; connect-src 'self' *; font-src 'self' data: https://at.alicdn.com https://www.google.com/recaptcha/; img-src 'self' data:;">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
